--- a/package.json
+++ b/package.json
@@ -4,10 +4,21 @@
   "description": "A small TicTacToe game.",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
+    "postinstall": "electron-builder install-app-deps"
+  },
+  "build": {
+    "appId": "com.dousherve.tic-tac-toe",
+    "productName": "TicTacToe",
+    "mac": {
+      "category": "games"
+    }
   },
   "author": "Louis Hervé",
   "devDependencies": {
-    "electron": "^3.0.4"
+    "electron": "^3.0.4",
+    "electron-builder": "^20.29.0"
   }
 }
