--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "electron .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "dist": "CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder"
   },
   "build": {
     "appId": "com.dousherve.tic-tac-toe",
